# q10_programming

(A)/: .gitignore  CMakeLists.txt  README.md  gen.py  main.cpp  plot.py
(A)/include/: DCEL.h
(A)/src/: CMakeLists.txt  DCEL.cpp  Monotone.cpp  Triangulate.cpp
(B)/: README.md  algorithms.py  edge.py  main.py  monotone_mountain.py  monotone_vertex.py  node.py  polygonal_area.py  polygonal_area_drawer.py  test.sh  trapezoid.py  triangle.py  vertex.py
